add to subprojects

--- a/examples/simple_example/CMakeLists.txt
+++ b/examples/simple_example/CMakeLists.txt
@@ -1,20 +1,24 @@
-#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -g;-G)
+find_package(CUDA)
+
+set(PROJ_INCLUDE      "../../")
+set(mgpu_INCLUDE_DIRS "../../externals/moderngpu/include")
+set(mgpu_SOURCE_DIRS  "../../externals/moderngpu/src")
+set(cub_INCLUDE_DIRS  "../../externals/cub")
 
 if(mgpu_INCLUDE_DIRS)
-  include_directories(${mgpu_INCLUDE_DIRS})
+  include_directories(${mgpu_INCLUDE_DIRS} ${PROJ_INCLUDE} ${cub_INCLUDE_DIRS})
 else()
   message(SEND_ERROR "Modern GPU include directory not set.")
 endif()
 
-file(COPY bips98_606.mtx DESTINATION ${PROJECT_BINARY_DIR}/data/simple_example)
-
 set (mgpu_SOURCE_FILES
   ${mgpu_SOURCE_DIRS}/mgpucontext.cu
   ${mgpu_SOURCE_DIRS}/mgpuutil.cpp)
+set( CMAKE_CXX_FLAGS "-std=c++11" )
 
-CUDA_ADD_EXECUTABLE(simple_example
-  simple_example.cu cpu_graph_lib.cpp
-  ${CMAKE_SOURCE_DIR}/gunrock/util/error_utils.cu
-  ${CMAKE_SOURCE_DIR}/gunrock/util/types.cu
+cuda_add_executable(simple_example
+  simple_example.cu
+  ../../gunrock/util/test_utils.cu
+  ../../gunrock/util/error_utils.cu
   ${mgpu_SOURCE_FILES}
   OPTIONS ${GENCODE} ${VERBOSE_PTXAS})
